--- a/ui/package.json
+++ b/ui/package.json
@@ -9,8 +9,10 @@
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
     "@mui/material": "5.10.8",
+    "@mui/styled-engine": "^5.11.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.6.2"
   },
   "scripts": {
     "dev": "vite",
@@ -25,6 +27,7 @@
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
     "jest": "^29.1.2",
+    "sass": "^1.57.1",
     "typescript": "^4.8.3",
     "vite": "^3.1.0"
   }
