--- a/ui/package.json
+++ b/ui/package.json
@@ -30,11 +30,13 @@
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@docker/extension-api-client-types": "0.3.0",
+    "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@types/node": "^18.7.18",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@vitejs/plugin-react": "^2.1.0",
+    "jsdom": "^21.1.0",
     "sass": "^1.57.1",
     "typescript": "^4.8.3",
     "vite": "^3.1.0",
